--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     margin-bottom: 10%;
 }
 
-h1.judul{
+.judul{
     color: rgb(255, 255, 255);
     font-size: medium;
     letter-spacing: 3px;
@@ -28,21 +28,20 @@ h1.judul{
     margin-right: 3%;
     border-radius: 50%;
     display: inline-block;
+    position: relative;
 }
 
-.content{
-    border-radius: 50px;
-    width: 350px;
-    height: 250px;
-    border: 5px solid #e4b24e;
-    background-color: #e4b24e;
-    -webkit-transform-origin: 0% 0%;
-    -webkit-transform: matrix3d(1.3071067811865476, 0, -0.071067811865475, 0.0015677669529663686, 0, 1.1, 0, 0, 0.7071067811865475, 0, 0.7071067811865476, -0.001767766952966369, 0, 0, 0, 1);
-    transform-origin: 0% 0%;
-    transform: matrix3d(1.3071067811865476, 0, -0.071067811865475, 0.0015677669529663686, 0, 1.1, 0, 0, 0.7071067811865475, 0, 0.7071067811865476, -0.001767766952966369, 0, 0, 0, 1);
-
+.icon {
+    position: absolute;
+    top: 12px;
+    left: 10.5px;
 }
 
+.iconyoutube {
+    position: absolute;
+    top: 12px;
+    left: 9px;
+}
 .smcircle{
     padding-left: 15%;
     padding-bottom: 3%;
@@ -57,13 +56,48 @@ h1.judul{
     display: block;
     margin-bottom: 1px;
 }
+
+.content{
+    position: relative;
+    border-radius: 50px;
+    width: 350px;
+    height: 250px;
+    border: 5px solid #e4b24e;
+    background-color: #e4b24e;
+    -webkit-transform-origin: 0% 0%;
+    -webkit-transform: matrix3d(1.3071067811865476, 0, -0.071067811865475, 0.0015677669529663686, 0, 1.1, 0, 0, 0.7071067811865475, 0, 0.7071067811865476, -0.001767766952966369, 0, 0, 0, 1);
+    transform-origin: 0% 0%;
+    transform: matrix3d(1.3071067811865476, 0, -0.071067811865475, 0.0015677669529663686, 0, 1.1, 0, 0, 0.7071067811865475, 0, 0.7071067811865476, -0.001767766952966369, 0, 0, 0, 1);
+
+}
+
+.papan {
+    position: absolute;
+    top: 45%;
+    left: 25%;
+    width: 50%;
+    height: 30%;
+    background-color: transparent;
+}
+
+
+p{
+    color: rgb(255, 255, 255);
+    font-size: medium;
+    letter-spacing: 3px;
+    text-align: start;
+    color: black;
+}
+
+
 .footer{
     position: fixed;
+    text-align: center;
     border-radius: 50px 50px;
     background: #ffffff;
     padding: 20px;
     width: 250px;
-    height: 110px;
+    height: 150px;
     -ms-transform: matrix(1.4, -0.3, 0, 1, 0, 0); /* IE 9 */
     transform: matrix(1.4, -0.3, 0, 1, 0, 0); /* Standard syntax */
 }
